--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -16,7 +16,9 @@
         {{ $archive2019 := $taxonomy.Pages }}
         {{ $taxonomy := index .Site.Taxonomies.archives "2020" }}
         {{ $archive2020 := $taxonomy.Pages }}
-        {{ $archive := $archive2017 | union $archive2018 | union $archive2019 | union $archive2020 }}
+        {{ $taxonomy := index .Site.Taxonomies.archives "2021" }}
+        {{ $archive2021 := $taxonomy.Pages }}
+        {{ $archive := $archive2017 | union $archive2018 | union $archive2019 | union $archive2020 | union $archive2021 }}
 
         {{ $blog = $blog | complement $archive }}
         {{ $paginator := .Paginate $blog }}
