--- a/layouts/event/card_content.html
+++ b/layouts/event/card_content.html
@@ -61,6 +61,10 @@
                                 <i class="fas fa-link"></i>
                                 <a href="http://www.oefol.at/anne?p=1&q=3&id={{$anneId}}">Veranstaltungsdetails</a>
                             </span>
+                            <span style="color: rgb(48, 115, 179);">
+                                <i class="fas fa-link"></i>
+                                <a href="http://www.oefol.at/anne?p=1&q=4&id={{$anneId}}">Meldungen</a>
+                            </span>
                         {{ end }}
                         {{ $infoResources := .Resources.Match "infos/*" }}
                         {{ partial "event_resources_list_flat" (dict "ctx" $infoResources "outputs" $outputs "links" $infolinks) }}
