--- a/layouts/partials/event_resources.html
+++ b/layouts/partials/event_resources.html
@@ -8,10 +8,18 @@
 <div>
   {{ if gt $anneId 0 }}
     <h4 class="uk-heading-line uk-text-bold"><span>Infos</span></h4>
+    <li>
     <span style="color: rgb(48, 115, 179);">
       <i class="fas fa-link"></i>
       <a href="http://www.oefol.at/anne?p=1&q=3&id={{$anneId}}">Veranstaltungsdetails</a>
     </span>
+    </li>
+    <li>
+    <span style="color: rgb(48, 115, 179);">
+      <i class="fas fa-link"></i>
+      <a href="http://www.oefol.at/anne?p=1&q=4&id={{$anneId}}">Meldungen</a>
+    </span>
+    </li>
   {{ end }}
   {{ if eq $anneId 0 }}<h4 class="uk-heading-line uk-text-bold"><span>Infos</span></h4>{{ end }}
   {{ $infoResources := .Resources.Match "infos/*" }}
