--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,10 +20,12 @@
         {{ $archive2020 := $taxonomy.Pages }}
         {{ $taxonomy := index .Site.Taxonomies.archives "2021" }}
         {{ $archive2021 := $taxonomy.Pages }}
+        {{ $taxonomy := index .Site.Taxonomies.archives "2022" }}
+        {{ $archive2022 := $taxonomy.Pages }}
         {{ $archive := $archive2017 | union $archive2018 | union $archive2019 | union $archive2020 | union $archive2021 }}
-        
+
         {{ $blog = $blog | complement $archive }}
-        
+
         {{ $paginator := .Paginate $blog }}
         {{ range .Paginator.Pages }}
           {{ .Render "summary" }}
