--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -20,7 +20,7 @@
         {{ $archive2021 := $taxonomy.Pages }}
         {{ $taxonomy := index .Site.Taxonomies.archives "2022" }}
         {{ $archive2022 := $taxonomy.Pages }}
-        {{ $archive := $archive2017 | union $archive2018 | union $archive2019 | union $archive2020 | union $archive2021 }}
+        {{ $archive := $archive2017 | union $archive2018 | union $archive2019 | union $archive2020 | union $archive2021 | union $archive2022 }}
 
         {{ $blog = $blog | complement $archive }}
         {{ $paginator := .Paginate $blog }}
