--- a/layouts/partials/event_resources.html
+++ b/layouts/partials/event_resources.html
@@ -26,7 +26,11 @@
   {{ partial "event_resources_list" (dict "ctx" $infoResources "outputs" $outputs "links" $infolinks) }}
 
   {{ if ($isActive) }}
-    {{ partial "functions/event_liveresult_link" (dict "id" .Params.liveresultat_id) }}
+    {{ if .Params.liveresultat_id }}
+      {{ partial "functions/event_liveresult_link" (dict "id" .Params.liveresultat_id "link" "Live Resultat") }}
+    {{ else if .Params.oresults_id }}
+      {{ partial "functions/event_liveresult_link" (dict "id" .Params.oresults_id "link" "OResults") }}
+    {{ end }}
   {{ end }}
 
   {{ with .Resources.Match "results/*" }}
