--- a/layouts/partials/event_list_upcomming.html
+++ b/layouts/partials/event_list_upcomming.html
@@ -70,7 +70,7 @@ function setClipboardText(text) {
                         {{ dateFormat .Site.Params.time_format_event_year .Date }}
                     </span>
                     {{ if and (eq .Params.status "active") (.Params.entry.anne) }}
-                        <span class="uk-text-bold uk-margin-left">{{ partial "functions/event_anne_link" (dict "id" .Params.anne_id "link" "Anmeldung") }}</span>
+                        <span class="uk-text-bold uk-margin-left">{{ partial "functions/event_anne_link" (dict "id" .Params.anne2_id "link" "Anmeldung") }}</span>
                     {{ end }}
                 </div>
                 <div class="uk-width-auto">
